Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57757

qtwayland appears to crash wl_proxy_marshal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 5.8.0 Alpha
    • QPA: Wayland
    • None

      It seems that qtwayland crashes with a program that runs when I tried the XCB plugin. This might be a bug in upstream wayland though, since wayland is the library that crashed?

      I have a full stack trace attached

        1. plasmalog.txt
          40 kB
        2. qtwaylandgdb.txt
          18 kB
        3. shapedclock.txt
          14 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanhelsing Johan Helsing
            nerdopolisturfwalker nerdopolis turfwalker
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes