Fix crash when starting clients

Don't send wl_surface::set_input_region requests before the wl_surface has been
initialized.

The shapedclock example used to crash in wl_proxy_marshal prior to this fix.

Task-number: QTBUG-57757
Change-Id: I0a459d374bfb88fb22d048eda3722a41112d67a4
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>